--- a/src/app/pages/filter-event/filter-event.page.scss
+++ b/src/app/pages/filter-event/filter-event.page.scss
@@ -5,9 +5,27 @@ h3 {
   font-family: "Playfair Display", serif;
   color: #3e403f;
   text-align: center;
-  padding-top: 7%;
+  padding: 7% 0;
+  background-color: var(--ion-color-information);
+  margin: 0 0 20px 0 !important;
 }
 
-ion-content {
-    --background: linear-gradient(-225deg, #ffd200 50%, #ffffff 50%);
-  }
+// ion-content {
+//     --background: linear-gradient(-225deg, #ffd200 50%, #ffffff 50%);
+//   }
+  
+ion-select {
+  border-bottom: 2px solid black;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 15px;
+}
+
+.form-button {
+  text-align: center;
+  padding-top: 15px;
+}
+
+ion-button {
+  font-weight: bold;
+}
