--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="information">
+  <ion-toolbar color="favorite">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/" color="back"></ion-back-button>
     </ion-buttons>
