--- a/src/app/pages/filter-event/filter-event.page.html
+++ b/src/app/pages/filter-event/filter-event.page.html
@@ -37,34 +37,36 @@
         placeholder="Palabras claves..."
         formControlName="general"
       ></ion-searchbar>
-      <ion-item>
-        <ion-datetime
-        formControlName="fecha_desde"
-        yearValues="{{customYearValues}}"
-        [dayShortNames]="customDayShortNames"
-        monthShortNames="Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre"
-        min="{{fullDay}}"
-        displayFormat="DD.MM.YYYY"
-        placeholder="dd/mm/aaaa"
-        cancelText="Cancelar"
-        doneText="Seleccionar"
-      ></ion-datetime>
-      <ion-datetime
-        formControlName="fecha_hasta"
-        yearValues="{{customYearValues}}"
-        [dayShortNames]="customDayShortNames"
-        monthShortNames="Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre"
-        min="{{fullDay}}"
-        displayFormat="DD.MM.YYYY"
-        placeholder="dd/mm/aaaa"
-        cancelText="Cancelar"
-        doneText="Seleccionar"
-      ></ion-datetime>
-      </ion-item>
+      <div class="filter-date">
+        <ion-item>
+          <ion-datetime
+            formControlName="fecha_desde"
+            [yearValues]="customYearValues"
+            monthShortNames="{{monthShortNames}}"
+            min="{{fullDay}}"
+            displayFormat="DD MMM YYYY"
+            placeholder="Fecha inicial"
+            cancelText="Cancelar"
+            doneText="Seleccionar"
+          ></ion-datetime>
+        </ion-item>
+        <ion-item>
+          <ion-datetime
+            formControlName="fecha_hasta"
+            [yearValues]="customYearValues"
+            monthShortNames="{{monthShortNames}}"
+            min="{{fullDay}}"
+            displayFormat="DD MMM YYYY"
+            placeholder="Fecha final"
+            cancelText="Cancelar"
+            doneText="Seleccionar"
+          ></ion-datetime>
+        </ion-item>
+      </div>
     </div>
     <div class="form-button">
-      <ion-button color="success" type="submit">Filtrar</ion-button>
-      <ion-button color="danger" (click)="cancel()">Cancelar</ion-button>
+      <ion-button class="btn-cancel" (click)="cancel()"><i class="fas fa-times"></i> Cancelar</ion-button>
+      <ion-button class="btn-ok" type="submit">Filtrar <i class="fas fa-check"></i></ion-button>
     </div>
   </form>
 </ion-content>
