--- a/src/app/pages/filter-event/filter-event.page.scss
+++ b/src/app/pages/filter-event/filter-event.page.scss
@@ -3,29 +3,86 @@
 h3 {
   font-size: 200%;
   font-family: "Playfair Display", serif;
-  color: #3e403f;
+  color: #ffffff;
   text-align: center;
   padding: 7% 0;
-  background-color: var(--ion-color-information);
+  background-color: var(--ion-color-favorite);
   margin: 0 0 20px 0 !important;
 }
 
-// ion-content {
-//     --background: linear-gradient(-225deg, #ffd200 50%, #ffffff 50%);
-//   }
-  
 ion-select {
-  border-bottom: 2px solid black;
+  // border-bottom: 2px solid var(--ion-color-favorite);
   width: 90%;
   margin: auto;
   margin-bottom: 15px;
+  // color: var(--ion-color-favorite);
 }
 
 .form-button {
-  text-align: center;
-  padding-top: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 ion-button {
+  width: 50%;
+  margin: 0;
+  --border-radius: none;
+}
+
+.sc-ion-searchbar-md-h {
+  //--box-shadow: none !important;
+  padding: 0px !important;
+  // color: var(--ion-color-favorite);
+  // --icon-color: var(--ion-color-favorite) !important;
+  width: 90%;
+  margin: auto;
+}
+
+.filter-date {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--ion-color-favorite);
+  margin: 10px auto;
+  width: 95%;
+}
+
+.filter-date > ion-item {
+  width: 50%;
+  // --placeholder-color: var(--ion-color-favorite) !important;
+  // color: var(--ion-color-favorite);
+}
+
+ion-button {
+  height: 50px;
   font-weight: bold;
+}
+
+i {
+  margin: 0 8px;
+  font-weight: bold;
+}
+
+.btn-ok {
+  --background: rgb(230, 122, 251);
+  --background: linear-gradient(
+    90deg,
+    rgb(219, 72, 248) 0%,
+    rgb(165, 10, 207) 100%,
+    rgba(98, 18, 116, 1) 100%
+  );
+}
+
+.btn-cancel {
+  --background: rgb(98, 18, 116);
+  --background: linear-gradient(
+    90deg,
+    rgba(98, 18, 116, 1) 0%,
+    rgb(165, 10, 207) 0%,
+    rgb(219, 72, 248) 100%
+  );
 }
