--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,17 +1,8 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-        <ion-list class="toggle-item">
-            <ion-item>
-                <i slot="start" class="fas fa-sun" style="font-size: 150%"></i>
-                <i style="margin-left: 10px; font-size: 130%" class="fas fa-moon"></i>
-                <ion-toggle *ngIf="modoOscuro == 'true'" style="margin-left: 12px;" slot="start" checked (ionChange)="changeTheme()" mode="ios"></ion-toggle>
-                <ion-toggle *ngIf="modoOscuro == null" style="margin-left: 12px;" slot="start" (ionChange)="changeTheme()" mode="ios"></ion-toggle>
-            </ion-item>
-            <ion-item>
-                <ion-toggle *ngIf="dyslexic == 'true'" style="margin-left: 12px;" slot="start" checked (ionChange)="dyslexicFont()" mode="ios"></ion-toggle>
-                <ion-toggle *ngIf="dyslexic == null" style="margin-left: 12px;" slot="start" (ionChange)="dyslexicFont()" mode="ios"></ion-toggle>
-            </ion-item>
-        </ion-list>
+        <ion-item>
+            <i class="fas fa-ellipsis-v" slot="end" (click)="openModalInclusive()"></i>
+        </ion-item>
     </ion-toolbar>
 </ion-header>
 <ion-content>
