--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -27,8 +27,8 @@
       </div>
   </section>
     <div class="ubicacion">
-      <div class="div-ubicacion">Teatro Macció</div>
       <div class="dir">
+        <div class="div-ubicacion" (click)="openMap()">{{ lugar }}</div>
         <i class="fas fa-map-marker-alt mark-info"></i>529, 18 de Julio, San
         José de Mayo
       </div>
