--- a/src/app/pages/event-detail/event-detail.page.scss
+++ b/src/app/pages/event-detail/event-detail.page.scss
@@ -45,6 +45,11 @@
   font-weight: 600;
 }
 
+.div-ubicacion {
+  text-decoration: underline;
+  color: #1142a6;
+}
+
 .fecha,
 .hora {
   width: 49%;
