--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -15,19 +15,19 @@
             <img class="imgSlider" src="https://laterapiadelarte.com/wp-content/uploads/2021/07/Kamwuaka1-850x500.jpg" />                
         </ion-slide>    
         <ion-slide class="sliderHijo"> 
-          <img class="imgSlider" src="https://www.casaboletas.org/wp-content/uploads/20210722_102541-2-1-scaled-850x500.jpg"/>                
+          <img class="imgSlider" src="https://blogtrabajo.gallito.com.uy/wp-content/uploads/2018/07/Image-Une-6-indicateurs-850x500.png"/>                
       </ion-slide>     
       <ion-slide class="sliderHijo"> 
         <img class="imgSlider" src="https://laterapiadelarte.com/wp-content/uploads/2021/07/Kamwuaka1-850x500.jpg" />                
     </ion-slide>    
     <ion-slide class="sliderHijo"> 
-      <img class="imgSlider" src="https://www.casaboletas.org/wp-content/uploads/20210722_102541-2-1-scaled-850x500.jpg"/>                
+      <img class="imgSlider" src="https://blogtrabajo.gallito.com.uy/wp-content/uploads/2018/07/Image-Une-6-indicateurs-850x500.png"/>                
   </ion-slide>        
   <ion-slide class="sliderHijo"> 
     <img class="imgSlider" src="https://laterapiadelarte.com/wp-content/uploads/2021/07/Kamwuaka1-850x500.jpg" />                
 </ion-slide>    
 <ion-slide class="sliderHijo"> 
-  <img class="imgSlider" src="https://www.casaboletas.org/wp-content/uploads/20210722_102541-2-1-scaled-850x500.jpg"/>                
+  <img class="imgSlider" src="https://blogtrabajo.gallito.com.uy/wp-content/uploads/2018/07/Image-Une-6-indicateurs-850x500.png"/>                
 </ion-slide>    
     </ion-slides>
     <div class="filter">
