--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -58,7 +58,7 @@
     </div>
     <div class="precio">
       <div><i class="fas fa-ticket-alt mark-info"></i></div>
-      <div class="puntos-venta">Ver puntos de venta</div>
+      <div class="puntos-venta" (click)="openModalSellingPoint()">Ver puntos de venta</div>
     </div>
   </div>
 </ion-content>
