selling-point and full menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 </div>
 
 <ion-app mode="md">
-  <ion-router-outlet></ion-router-outlet>
+	<app-menu></app-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
