--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -53,12 +53,12 @@
   </div>
   <div class="ticket">
     <div class="entradas">
-      <div class="entradas_div">Ticket por persona</div>
+      <div class="entradas_div">Ticket por persona desde</div>
       <div class="precios_div">$ 200</div>
     </div>
-    <div class="precio">
+    <div class="precio" (click)="openModalSellingPoint()">
       <div><i class="fas fa-ticket-alt mark-info"></i></div>
-      <div class="puntos-venta" (click)="openModalSellingPoint()">Ver puntos de venta</div>
+      <div class="puntos-venta">Ver puntos de venta</div>
     </div>
   </div>
 </ion-content>
