ContadorVisitasLugar: Implementa solucion para contador de visitas a lugares. Se crean metodos de AM y Get. Se crea tabla en DB para guardar las visitas a lugares. Se prueba OK. ::Pendiente: Documentacion Validacion con equipo Mas pruebas.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -80,6 +80,7 @@
         *ngFor="let item of obsItems$ | async"
         id="{{ item.id }}"
         [routerLink]="['/places', item.$key]"
+        (click)="sumaVisitaLugar(item.$key)"
       >
         <ion-card-header
           *ngIf="item.tipo == 'Rural'"
