TextoAvoz: Usa api text-to-speech de google. Lee descripcion de lugares. Hay cosas que pulir. Pendiente: Pruebas Validacion"

--- a/src/app/pages/modal-info/modal-info.page.scss
+++ b/src/app/pages/modal-info/modal-info.page.scss
@@ -37,3 +37,11 @@ i {
     color: var(--ion-color-light) !important;
     font-size: 1.5rem !important;
 }
+
+.access {
+    float: right;
+    margin-right: 3%;
+    font-size: 1.0rem !important;
+    color: var(--ion-color-back) !important;
+
+  }
