--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -3,13 +3,23 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="places/{{id}}" color="back"></ion-back-button>
         </ion-buttons>
-        <ion-title color="back">{{ nombre }}</ion-title>
+        <ion-title color="back">
+                {{ nombre }}
+            <button (click)="escucharDescripcion(descripcion)" class="btn btn-outline-dark" type="button">
+                <i class="fas fa-assistive-listening-systems access" color="back"  ></i>
+            </button>
+        </ion-title>
     </ion-toolbar>
     <ion-toolbar *ngIf="tipo == 'Urbano'" color="information">
         <ion-buttons slot="start">
             <ion-back-button defaultHref="places/{{id}}" color="back"></ion-back-button>
         </ion-buttons>
-        <ion-title color="back">{{ nombre }}</ion-title>
+        <ion-title color="back">
+                {{ nombre }}
+            <button (click)="escucharDescripcion(descripcion)" class="btn btn-outline-dark" type="button">
+                <i class="fas fa-assistive-listening-systems access" color="back"  ></i>
+            </button>
+        </ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
