--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -69,6 +69,11 @@
                 <div class="iconEstilos" *ngIf="caminar == true">
                     <i class="fas fa-running"></i>
                 </div>
+                <div class="iconEstilos ">
+                    <button (click)="escucharDescripcion(descripcion)" class="btn btn-outline-dark" type="button">
+                        <i class="fas fa-assistive-listening-systems"></i>
+                    </button>
+                </div>
                 <div id="dist">
                     <div>{{ distancia | formatDistancia }}</div>                 
                 </div>
