DondeComeryDormir: Crea consusultas firestore a las tablas donde Comer y Dormir. Se obtienen las colecciones de prueba y se muestran en pantalla. Filtros quedan funcionando. Pendiente: Validacion del equipo. Carga de datos reales. Pruebas.

--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -18,7 +18,7 @@
     </div>
    
     <ion-list class="lista">
-        <ion-item *ngFor="let item of eat | filtroDondeComer:textoBuscar">
+        <ion-item *ngFor="let item of weat | filtroDondeComer:textoBuscar">
             <div class="padre">
                 <div class="imagen">
                     <ion-avatar item-start>
