--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -1,9 +1,55 @@
 <ion-content>
-  <ul>
-    <li><a routerLink="/home">Lugares</a></li>
-    <li><a routerLink="">Eventos</a></li>
-    <li><a routerLink="">Donde dormir</a></li>
-    <li><a routerLink="">Donde comer</a></li>
-    <li><a routerLink=""></a></li>
-  </ul>
+  <div class="container">
+    <!-- <div class="chooseFilter">
+      <ion-button (click)="seeDepto()">Departamento</ion-button>
+      <ion-button (click)="seeDistance()">Distancia</ion-button>
+    </div>
+  
+    <form [formGroup]="filterInitail">
+      <ion-select
+        id="depto"
+        formControlName="depto"
+        placeholder="Departamento"
+        *ngIf="filterDepto"
+      >
+        <ion-select-option value="San José">San José</ion-select-option>
+        <ion-select-option value="Colonia">Colonia</ion-select-option>
+      </ion-select>
+    </form>
+    <ion-range
+      min="0"
+      max="150"
+      color="secondary"
+      *ngIf="filterDistance"
+      dualKnobs="true"
+      pin="true"
+    >
+      <ion-label slot="start">0</ion-label>
+      <ion-label slot="end">150</ion-label>
+    </ion-range> -->
+    <div class="slider_filter">
+      <div class="slider_filter-title">
+        <h1>Hola, soy domin<span>go!</span></h1>
+        <p>
+          y a partir de ahora seré tu guía. <br />
+          ¿Descubrimos juntos un nuevo sitio?
+        </p>
+      </div>
+      <div class="slider_filter-filter">
+        <ion-searchbar></ion-searchbar>
+      </div>
+    </div>
+
+    <div class="menu">
+      <div class="div__menu">
+        <div class="div__menu-izq" routerLink="/home">¿dónde ir?</div>
+        <div class="div__menu-izq" routerLink="/where-eat">¿dónde comer?</div>
+        <div class="div__menu-izq" routerLink="/where-sleep">¿dónde dormir?</div>
+      </div>
+      <div class="div__menu">
+        <div class="div__menu-der" routerLink="/events">¿qué hacer?</div>
+        <div class="div__menu-der" routerLink="/places/9">Casa Dominga</div>
+      </div>
+    </div>
+  </div>
 </ion-content>
