--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -51,7 +51,7 @@
         </ion-slide>
       </ion-slides>
     </div>
-    <div class="menu">
+    <!-- <div class="menu">
       <div class="contenedor-iconos">
         <div class="icono">
           <a class="iconMenu" routerLink="/circuits">
@@ -74,7 +74,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="cards">
       <ion-card
         *ngFor="let item of obsItems$ | async"
