--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -42,12 +42,12 @@
 
     <div class="menu">
       <div class="div__menu">
-        <div class="div__menu-izq" routerLink="/home">¿dónde ir?</div>
-        <div class="div__menu-izq" routerLink="/where-eat">¿dónde comer?</div>
-        <div class="div__menu-izq" routerLink="/where-sleep">¿dónde dormir?</div>
+        <div class="div__menu-izq" routerLink="/tabs/places">¿dónde ir?</div>
+        <div class="div__menu-izq" routerLink="/tabs/eat">¿dónde comer?</div>
+        <div class="div__menu-izq" routerLink="/tabs/sleep">¿dónde dormir?</div>
       </div>
       <div class="div__menu">
-        <div class="div__menu-der" routerLink="/events">¿qué hacer?</div>
+        <div class="div__menu-der" routerLink="/tabs/events">¿qué hacer?</div>
         <div class="div__menu-der" routerLink="/places/9">Casa Dominga</div>
       </div>
     </div>
