--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,16 +1,36 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="places">
-      <i class="fas fa-tractor"></i>
-      <ion-label>Lugares</ion-label>
-    </ion-tab-button>
-    <ion-tab-button tab="events">
-      <i class="fas fa-tractor"></i>
-      <ion-label>Eventos</ion-label>
+    <ion-tab-button tab="home">
+      <i class="fas fa-home"></i>
+      <!-- <ion-label>Home</ion-label> -->
     </ion-tab-button>
     <ion-tab-button tab="sleep">
-      <i class="fas fa-tractor"></i>
-      <ion-label>Donde dormir</ion-label>
+      <i class="fas fa-bed"></i>
+      <!-- <ion-label>Lugares</ion-label> -->
     </ion-tab-button>
+    <ion-tab-button tab="events">
+      <i class="fas fa-calendar-week"></i>
+      <!-- <ion-label>Eventos</ion-label> -->
+    </ion-tab-button>
+    <ion-tab-button tab="places">
+      <i class="fas fa-map-marked-alt main-option"></i>
+      <!-- <ion-label>Donde dormir</ion-label> -->
+    </ion-tab-button>
+    <ion-tab-button tab="eat">
+      <i class="fas fa-utensils"></i>
+      <!-- <ion-label>Donde dormir</ion-label> -->
+    </ion-tab-button>
+    <ion-tab-button tab="info">
+      <!-- <ion-label>Donde dormir</ion-label> -->
+      <i class="fas fa-palette"></i>
+    </ion-tab-button>
+    <ion-tab-button tab="info">
+      <!-- <ion-label>Donde dormir</ion-label> -->
+      <i class="fas fa-info-circle"></i>
+    </ion-tab-button>
+    <!-- <ion-tab-button tab="sleep">
+      <ion-label>Donde dormir</ion-label>
+      <i class="fas fa-ellipsis-h"></i>
+    </ion-tab-button> -->
   </ion-tab-bar>
 </ion-tabs>
