--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -8,24 +8,57 @@
         </ion-title>
 <!-- Conjunto de botones para la reproduccion de texto a audio -->
         <ion-buttons slot="end" >
-            <ion-button (click)=" escuchar = !escuchar" class="btn btn-outline-dark" type="button">
+            <ion-button (click)=" escuchar = !escuchar"  type="button">
                 <i class="fas fa-assistive-listening-systems access" color="back"  ></i>
             </ion-button>
         </ion-buttons>
-        <ion-buttons *ngIf="escuchar" >
+        <ion-buttons *ngIf="escuchar"  >
             <ion-buttons *ngIf="!speaking && !paused" >
-                <ion-button class="btn btn-outline-secondary" (click)="velocidadReproduccion( spUttData.rate )" > x{{ spUttData.rate }} </ion-button>
-                <ion-button class="btn btn-outline-primary" (click)="speaking = !speaking ; reproducirDescripcion( descripcion ) ">play</ion-button>
+                <ion-button 
+                    (click)="velocidadReproduccion( spUttData.rate )"
+                    shape="round"
+                    fill="outline"
+                    color="back"
+                    > 
+                    <strong>{{ spUttData.rate }}</strong><small>x</small> 
+                </ion-button>
+                <ion-button 
+                    size="small"
+                    (click)="speaking = !speaking ; 
+                    reproducirDescripcion( descripcion ) "
+                    color="primary"
+                    >
+                    <i class="fas fa-play-circle"></i>
+                </ion-button>
             </ion-buttons>
             <ion-buttons *ngIf="speaking && !paused" >
-                <ion-button class="btn btn-outline-dark" (click)=" paused = !paused ; pausarReproduccion() " >pausa</ion-button>
-                <ion-button class="btn btn-outline-danger" (click)="speaking = !speaking " >stop</ion-button>
+                <ion-button 
+                    class="btn btn-outline-dark" 
+                    (click)=" paused = !paused ; pausarReproduccion() " 
+                    >
+                        <i class="fas fa-pause-circle"></i>
+                    </ion-button>
+                <ion-button 
+                    (click)="speaking = !speaking "
+                    color="medium" >
+                    <i class="fas fa-stop-circle"></i>
+                </ion-button>
             </ion-buttons>
             <ion-buttons *ngIf="speaking && paused" >
-                <ion-button class="btn btn-outline-warning" (click)=" paused = !paused ; reanudarReproduccion() " >reanudar</ion-button>
-                <ion-button class="btn btn-outline-danger" (click)="speaking = !speaking; paused = false ; detenerReproduccion() " >stop</ion-button>
+                <ion-button 
+                    (click)=" paused = !paused ; reanudarReproduccion()"
+                    color="secondary" >
+                    <i class="fas fa-play-circle"></i>
+                </ion-button>
+                <ion-button 
+                    color="danger" 
+                    (click)="speaking = !speaking; paused = false ; 
+                    detenerReproduccion()">
+                    <i class="fas fa-stop-circle"></i>
+                </ion-button>
             </ion-buttons>
-        </ion-buttons>
+    </ion-buttons>
+   
 <!-- Fin de los botones -->
     </ion-toolbar>
     <ion-toolbar *ngIf="tipo == 'Urbano'" color="information">
@@ -34,10 +67,60 @@
         </ion-buttons>
         <ion-title color="back">
                 {{ nombre }}
-            <button (click)="reproducirDescripcion()" class="btn btn-outline-dark" type="button">
-                <i class="fas fa-assistive-listening-systems access" color="back"  ></i>
-            </button>
         </ion-title>
+<!-- Conjunto de botones para la reproduccion de texto a audio -->
+<ion-buttons slot="end" >
+    <ion-button (click)=" escuchar = !escuchar"  type="button">
+        <i class="fas fa-assistive-listening-systems access" color="back"  ></i>
+    </ion-button>
+</ion-buttons>
+<ion-buttons *ngIf="escuchar"  >
+    <ion-buttons *ngIf="!speaking && !paused" >
+        <ion-button 
+            (click)="velocidadReproduccion( spUttData.rate )"
+            shape="round"
+            fill="outline"
+            color="back"
+            > 
+            <strong>{{ spUttData.rate }}</strong><small>x</small> 
+        </ion-button>
+        <ion-button 
+            size="small"
+            (click)="speaking = !speaking ; 
+            reproducirDescripcion( descripcion ) "
+            color="primary"
+            >
+            <i class="fas fa-play-circle"></i>
+        </ion-button>
+    </ion-buttons>
+    <ion-buttons *ngIf="speaking && !paused" >
+        <ion-button 
+            class="btn btn-outline-dark" 
+            (click)=" paused = !paused ; pausarReproduccion() " 
+            >
+                <i class="fas fa-pause-circle"></i>
+            </ion-button>
+        <ion-button 
+            (click)="speaking = !speaking "
+            color="medium" >
+            <i class="fas fa-stop-circle"></i>
+        </ion-button>
+    </ion-buttons>
+    <ion-buttons *ngIf="speaking && paused" >
+        <ion-button 
+            (click)=" paused = !paused ; reanudarReproduccion()"
+            color="secondary" >
+            <i class="fas fa-play-circle"></i>
+        </ion-button>
+        <ion-button 
+            color="danger" 
+            (click)="speaking = !speaking; paused = false ; 
+            detenerReproduccion()">
+            <i class="fas fa-stop-circle"></i>
+        </ion-button>
+    </ion-buttons>
+</ion-buttons>
+<!-- Fin de los botones -->
     </ion-toolbar>
 </ion-header>
 <ion-content>
